# JiraTrack

JiraTrack/src/: index.html  styles.css
JiraTrack/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
JiraTrack/src-tauri/configuration/: data.data
JiraTrack/src-tauri/src/: main.rs
JiraTrack/src-tauri/src/services/: mod.rs
JiraTrack/src-tauri/src/services/Configuration/: configurationManager.rs  mod.rs
JiraTrack/src-tauri/src/services/Jira/: jiraClient.rs  mod.rs
JiraTrack/src/assets/js/: main.js
